--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "minimum_chrome_version": "45",
   "name": "Tag-a-Doc",
   "short_name": "TagaDoc",
-  "description": "Easily keep track of projects, review dates, confidentiality levels or custom metadata. This displays document tags in G-Suite Apps",
-  "version": "1.0.6",
+  "description": "Easily keep track of projects, review dates, confidentiality levels or metadata. Displays document/calendar tags in G-Suite Apps",
+  "version": "1.0.8",
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
